third_party/move/move-compiler-v2/tests/checking/inlining/continue_without_loop.exp
// -- Model dump before first bytecode pipeline
module 0xc0ffee::m {
    private fun continued() {
        continue;
        Tuple()
    }
} // end 0xc0ffee::m

// -- Sourcified model before first bytecode pipeline
module 0xc0ffee::m {
    fun continued() {
        continue;
    }
}


Diagnostics:
error: missing enclosing loop statement
  ┌─ tests/checking/inlining/continue_without_loop.move:3:2
  │
3 │     continue;
  │     ^^^^^^^^
