third_party/move/move-compiler-v2/tests/checking/inlining/continue_without_loop.move
module 0xc0ffee::m {
    fun continued() {
	continue;
    }
}
